infra/apps/sqld/overlays/public/backend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sqld-backend
spec:
  parentRefs:
    - name: sqld-gateway
      namespace: app
  hostnames:
    - solsqld.com
    - www.solsqld.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      timeouts:
        request: 75s
      backendRefs:
        - name: sqld-backend
          port: 8000
